# hray

./: CHANGELOG.md  README.md  hray.cabal
src/: Main.hs
src/Camera/: Camera.hs  Function.hs  Ortographic.hs  Pinhole.hs  ThinLens.hs
src/HRay/: HRay.hs  Params.hs  Scene.hs  ShadeRec.hs  State.hs  ViewPlane.hs
src/Object/: Box.hs  Object.hs  Plane.hs  Sphere.hs  Triangle.hs
src/Sampler/: Jittered.hs  MultiJittered.hs  NRook.hs  PureRandom.hs  Regular.hs  Sampler.hs
src/Tracer/: Simple.hs  SimpleTracer.hs  TestSampler.hs  Tracer.hs
src/Utility/: Constants.hs  Params.hs  Point2D.hs  RGBColor.hs  Ray.hs  Scene.hs  ShadeRec.hs  Utility.hs  Vector3D.hs
src/World/: ViewPlane.hs  World.hs
